# cellarium-cas

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
.github/workflows/: main-workflow.yaml  publish-pypi.yaml  publish-pypi.yml  tox.yaml
benchmarking/azimuth/: README.rst  run.sh
cellarium/cas/: __init__.py  _io.py  _path_utils.py  _read_data.py  _utils.py  client.py  constants.py  data_preparation.py  endpoints.py  exceptions.py  logging.py  models.py  postprocess.py  scanpy_utils.py  service.py  settings.py  version.py
docs/source/: conf.py  index.rst
notebooks/: 01_pbmc_10k_v3_scrnaseq_demo.ipynb  02_pbmc_4k_v2_scrnaseq_demo.ipynb  03_heart_hcm_dcm_snrnaseq_demo.ipynb  04_gtex_snrnaseq_demo.ipynb  quickstart_tutorial.ipynb
requirements/: base.txt  benchmark.txt  dev.txt  docs.txt  scanpy.txt  test.txt  vis.txt
resources/: casp_v1_feature_list.csv
src/: cas_client_helper.py
src/cas_cli/: __init__.py  _read_data.py  client.py  data_preparation.py  service.py
src/cas_helper/: __init__.py  _cli_helper.py
src/casp_cli/: __init__.py  _read_data.py  data_preparation.py  exceptions.py  service.py
tests/assets/: test_adata.h5ad
tests/integration/: constants.py  test_cas.py
tests/unit/: conftest.py  test_benchmarking_flat.py  test_benchmarking_hierarchical_f_measure.py  test_benchmarking_metrics.py  test_benchmarking_ontology_aware.py  test_cas.py  test_cas_client.py  test_cas_service.py  test_cell_ontology_cache.py  test_cli_benchmark.py  test_io.py  (+7 more)
(+71 files in other folders)
